fixed z-index 2.0

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
     left: 0;
     padding: 20px 0 0 0;
     align-items: center;
-    z-index: 5;
+    z-index: 10;
 }
 
 @media screen and (max-width: 1430px) {
